k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: battleship-api
  namespace: battleship
spec:
  selector:
    app: battleship-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
